--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger learnjenkins job
-        uses: fahron/jenkinsdocker@master
+        uses: fahronona/jenkinsdocker@master
         with:
           jenkins_url: "http://192.168.64.2:8080/"
           jenkins_user: ${{ secrets.JENKINS_USER }}
